# claimdocs

./: .gitignore  CHARTER.md  NEXT.md  NOTICE  PROVENANCE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DOC_NORMALIZATION.md  MANPAGE_STANDARD.md
examples/toy-webapp/: README.md  claimdocs.yml
examples/toy-webapp/cases/: architecture.yaml
examples/toy-webapp/receipts/: r-api-handler.yaml  r-api-test.yaml  r-enqueue.yaml  r-retry-candidate.yaml  r-save-user.yaml  r-worker-spec.yaml
examples/toy-webapp/src/: api.py  test_api.py
fixtures/fail/derived-tower/cases/: c.yaml
fixtures/fail/gate-no-refusal/: claimdocs.yml
fixtures/fail/gate-no-refusal/cases/: c.yaml
fixtures/fail/no-receipt/cases/: c.yaml
fixtures/fail/wired-no-witness/cases/: c.yaml
fixtures/pass/cases/: synthetic.yaml
src/claimdocs/: __init__.py  builder.py  cli.py  config.py  linter.py  verify.py
src/claimdocs/template/: claimdocs.yml
tests/: test_claimdocs.py
